--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
         "sass-loader": "^8.0.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "swing": "^3.1.4",
+        "vue-swing": "0.0.10",
+        "vue2-interact": "0.0.3"
     }
 }
