--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/passport": "^9.2",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "symfony/dotenv": "^5.1"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
@@ -22,7 +23,8 @@
         "laravel/ui": "^2.0",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "phpunit/phpunit": "^8.5",
+        "phpspec/phpspec": "2.2.1"
     },
     "config": {
         "optimize-autoloader": true,
@@ -31,7 +33,9 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [
+                "laravel/dusk"
+            ]
         }
     },
     "autoload": {
