--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
         "laravel/ui": "^2.0",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5",
-        "phpspec/phpspec": "2.2.1"
+        "phpunit/phpunit": "^8.5"
     },
     "config": {
         "optimize-autoloader": true,
